# WhiteLabel-Store

./: .gitignore  Dockerfile  Dockerfile.frontend  README.md
back-end/: Cargo.toml
back-end/src/: main.rs
back-end/src/functions/: install.rs  mod.rs  route.rs
front-end/: package-lock.json  package.json  vite.config.js
front-end/.svelte-kit/: ambient.d.ts
front-end/src/lib/: Banner.svelte  Footer.svelte  Header.svelte  ProductCard.svelte  auth.js  func.js
front-end/src/routes/: +layout.svelte  +page.svelte
front-end/src/routes/new_product/: +page.svelte
front-end/src/routes/product/[id]/: +page.svelte
